src/objects/Apttus__WizardInputControl__c.object
<CustomObject>
    <description>The individual question, instruction statements and associated field attributes</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Input control within a step is Active. Setting Wizard Design as Active automatically activates the included input controls.</description>
        <inlineHelpText>Signifies that the Input control within a step is Active. Setting Wizard Design as Active automatically activates the included input controls.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Input controls</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Input Controls</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Category 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs within steps and wizard designs.</description>
        <inlineHelpText>Business object context, used to filter and align inputs within steps and wizard designs.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object. 
All means that this input can be used in any step design. 
Object means that this input can be used only in aligned (same object) step design.</description>
        <inlineHelpText>Type of context, whether its All or Object. 
All means that this input can be used in any step design. 
Object means that this input can be used only in aligned (same object) step design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DefaultResponse__c</fullName>
        <description>Place a desired default response value here or leave blank</description>
        <inlineHelpText>Place a desired default response value here or leave blank</inlineHelpText>
        <label>Default Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>For the user to understand the intended use of the Input Control</description>
        <inlineHelpText>For the user to understand the intended use of the Input Control</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldClass__c</fullName>
        <description>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</description>
        <inlineHelpText>Wizard Input Field - A field which exists only within the wizard to make determinations 
Object Field - A field which exists only as a salesforce object to make determinations</inlineHelpText>
        <label>Field Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wizard Input Field</fullName>
                </value>
                <value>
                    <fullName>Object Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__FieldName__c</fullName>
        <description>The Name of the salesforce object field the question applies to</description>
        <inlineHelpText>The Name of the salesforce object field the question applies to</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldType__c</fullName>
        <description>Data type of the field</description>
        <inlineHelpText>Data type of the field</inlineHelpText>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__GhostResponse__c</fullName>
        <description>Place a desired runtime information statement here or leave blank.</description>
        <inlineHelpText>Place a desired runtime information statement here or leave blank.</inlineHelpText>
        <label>Ghost Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__HorizontalSequence__c</fullName>
        <description>Sequence of inputs in a tabular input group from left to right</description>
        <inlineHelpText>Sequence of inputs in a tabular input group from left to right</inlineHelpText>
        <label>Horizontal Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__InterfaceDefinition__c</fullName>
        <description>The definition of the data type entered in by the designer.</description>
        <inlineHelpText>The definition of the data type entered in by the designer.</inlineHelpText>
        <label>Interface Definition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__ResponseDataType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Text Entry</fullName>
                </value>
                <value>
                    <fullName>Picklist Dropdown</fullName>
                </value>
                <value>
                    <fullName>Picklist Radio Button</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency &lt;Type, Chars, Dec&gt;</fullName>
                </value>
                <value>
                    <fullName>Number &lt;Chars, Dec&gt;</fullName>
                </value>
                <value>
                    <fullName>Date &lt;Format&gt;</fullName>
                </value>
                <value>
                    <fullName>Percent &lt;Dec&gt;</fullName>
                </value>
                <value>
                    <fullName>Expression Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Label__c</fullName>
        <description>The label for the input control.</description>
        <inlineHelpText>The label for the input control.</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ObjectName__c</fullName>
        <description>The name of the object that qualifies the field the question resolves</description>
        <inlineHelpText>The name of the object that qualifies the field the question resolves</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Precedence__c</fullName>
        <description>Denotes what sequence should proceed this input in order to appear. In the form (1) (1 OR 2) (1 AND 2) etc.</description>
        <inlineHelpText>Denotes what sequence should proceed this input in order to appear. In the form (1) (1 OR 2) (1 AND 2) etc.</inlineHelpText>
        <label>Precedence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Question__c</fullName>
        <description>The question or instruction statement that is used to direct the end user when completing the wizard after setup.  Defaults to Input Label</description>
        <inlineHelpText>The question or instruction statement that is used to direct the end user when completing the wizard after setup.  Defaults to Input Label</inlineHelpText>
        <label>Question/Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if an input control value can be edited by the runtime user</description>
        <inlineHelpText>Specifies if an input control value can be edited by the runtime user</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is a repeatable question.</description>
        <inlineHelpText>Indicates this is a repeatable question.</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that an input value is required for the end user to continue the wizard</description>
        <inlineHelpText>Indicates that an input value is required for the end user to continue the wizard</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ResponseDataType__c</fullName>
        <description>The data type of the response by the end user.</description>
        <inlineHelpText>The data type of the response by the end user.</inlineHelpText>
        <label>Response Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Concatenation</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Response__c</fullName>
        <description>Comma separated list of values for making determinations on.</description>
        <inlineHelpText>Comma separated list of values for making determinations on.</inlineHelpText>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeDescription__c</fullName>
        <description>Describe what the runtime user can see as a help or instruction description of this input control</description>
        <inlineHelpText>Describes what the runtime user can see as a help or instruction description of this input control.</inlineHelpText>
        <label>Runtime Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The sequence in which this input entry should be displayed during runtime</description>
        <inlineHelpText>The sequence in which this input entry should be displayed during runtime</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Sub-Category 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Transient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Input added to a Step is in Transient state until the Step is saved.</description>
        <inlineHelpText>Input added to a Step is in Transient state until the Step is saved.</inlineHelpText>
        <label>Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Validation2__c</fullName>
        <description>List of values to be displayed during runtime.</description>
        <inlineHelpText>List of values to be displayed during runtime.</inlineHelpText>
        <label>Validation Input</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Validation__c</fullName>
        <description>List of values to be displayed during runtime.</description>
        <inlineHelpText>List of values to be displayed during runtime.</inlineHelpText>
        <label>Validation Input (Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <description>Version number (counter) of input control design. This identifies the input control uniquely in the chronology of creation.</description>
        <displayFormat>{0000000}.{000}</displayFormat>
        <inlineHelpText>Version number (counter) of input control design. This identifies the input control uniquely in the chronology of creation.</inlineHelpText>
        <label>Version</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__VerticalSequence__c</fullName>
        <description>Sequence of input in an input group rendered from top to bottom</description>
        <inlineHelpText>Sequence of input in an input group rendered from top to bottom</inlineHelpText>
        <label>Vertical Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the input group that this input control belongs to</description>
        <inlineHelpText>Lookup to the input group that this input control belongs to</inlineHelpText>
        <label>Wizard Input Group</label>
        <referenceTo>Apttus__WizardInputGroup__c</referenceTo>
        <relationshipName>Wizard_Input_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRulesetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to ruleset for input expression</description>
        <inlineHelpText>Lookup to ruleset for input expression</inlineHelpText>
        <label>Wizard Ruleset</label>
        <referenceTo>Apttus__WizardRuleset__c</referenceTo>
        <relationshipName>Wizard_Input_Controls1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the step this input control belongs to</description>
        <inlineHelpText>Lookup to the step this input control belongs to</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Wizard_Input_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wizard Step this Input belongs to</description>
        <inlineHelpText>Wizard Step this Input belongs to</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Input_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Input Control (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__ObjectName__c</columns>
        <columns>Apttus__FieldName__c</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__Required__c</columns>
        <columns>Apttus__Sequence__c</columns>
        <columns>Apttus__ContextObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>